// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AlignmentView Align should render 1`] = `
<DocumentFragment>
  <div
    class="main-content-and-footer"
  >
    <div
      class="button-group"
    >
      <div
        class="dropdown-container"
      >
        <button
          class="button dropdown tertiary"
          type="button"
        >
          Highlight properties
        </button>
        <div
          class="dropdown-menu"
        >
          <div
            class="autocomplete-container"
          >
            <span
              class="search-input"
            >
              <input
                data-testid="search-input"
                placeholder="Enter a color scheme"
                type="text"
                value=""
              />
              <span
                class="search-input__suffix"
                data-testid="search-input-suffix"
                role="presentation"
              >
                <svg
                  fill="currentColor"
                  height="14"
                  viewBox="0 0 512 512"
                  width="14"
                >
                  <path
                    d="M505 443L405 343c-4-4-10-7-17-7h-16a208 208 0 10-36 36v16c0 7 3 13 7 17l100 100c9 9 24 9 34 0l28-28c9-10 9-25 0-34zM208 336a128 128 0 110-256 128 128 0 010 256z"
                  />
                </svg>
              </span>
            </span>
            <div
              class="autocomplete-menu"
            >
              <div
                class="dropdown-menu__panel"
              />
            </div>
          </div>
          <div
            class="dropdown-menu__panel"
          >
            <ul
              class=""
            >
              <li
                class=""
              >
                <button
                  class="active"
                  type="button"
                >
                  Similarity
                </button>
              </li>
              <li
                class=""
              >
                <button
                  class=""
                  type="button"
                >
                  Clustal
                </button>
              </li>
              <li
                class="branch"
              >
                <button
                  class=""
                  type="button"
                >
                  Physical properties
                </button>
                <ul
                  class=""
                >
                  <li
                    class=""
                  >
                    <button
                      class=""
                      type="button"
                    >
                      Hydrophobicity
                    </button>
                  </li>
                  <li
                    class=""
                  >
                    <button
                      class=""
                      type="button"
                    >
                      Negative
                    </button>
                  </li>
                  <li
                    class=""
                  >
                    <button
                      class=""
                      type="button"
                    >
                      Positive
                    </button>
                  </li>
                  <li
                    class=""
                  >
                    <button
                      class=""
                      type="button"
                    >
                      Charged
                    </button>
                  </li>
                  <li
                    class=""
                  >
                    <button
                      class=""
                      type="button"
                    >
                      Polar
                    </button>
                  </li>
                  <li
                    class=""
                  >
                    <button
                      class=""
                      type="button"
                    >
                      Aliphatic
                    </button>
                  </li>
                  <li
                    class=""
                  >
                    <button
                      class=""
                      type="button"
                    >
                      Aromatic
                    </button>
                  </li>
                </ul>
              </li>
              <li
                class="branch"
              >
                <button
                  class=""
                  type="button"
                >
                  Structural properties
                </button>
                <ul
                  class=""
                >
                  <li
                    class=""
                  >
                    <button
                      class=""
                      type="button"
                    >
                      Buried Index
                    </button>
                  </li>
                  <li
                    class=""
                  >
                    <button
                      class=""
                      type="button"
                    >
                      Helix Propensity
                    </button>
                  </li>
                  <li
                    class=""
                  >
                    <button
                      class=""
                      type="button"
                    >
                      Strand Propensity
                    </button>
                  </li>
                  <li
                    class=""
                  >
                    <button
                      class=""
                      type="button"
                    >
                      Turn Propensity
                    </button>
                  </li>
                </ul>
              </li>
              <li
                class=""
              >
                <button
                  class=""
                  type="button"
                >
                  Serine Threonine
                </button>
              </li>
              <li
                class="branch"
              >
                <button
                  class=""
                  type="button"
                >
                  Other
                </button>
                <ul
                  class=""
                >
                  <li
                    class=""
                  >
                    <button
                      class=""
                      type="button"
                    >
                      Clustal 2
                    </button>
                  </li>
                  <li
                    class=""
                  >
                    <button
                      class=""
                      type="button"
                    >
                      Cinema
                    </button>
                  </li>
                  <li
                    class=""
                  >
                    <button
                      class=""
                      type="button"
                    >
                      Lesk
                    </button>
                  </li>
                  <li
                    class=""
                  >
                    <button
                      class=""
                      type="button"
                    >
                      MAE
                    </button>
                  </li>
                  <li
                    class=""
                  >
                    <button
                      class=""
                      type="button"
                    >
                      Taylor
                    </button>
                  </li>
                  <li
                    class=""
                  >
                    <button
                      class=""
                      type="button"
                    >
                      Zappo
                    </button>
                  </li>
                </ul>
              </li>
            </ul>
          </div>
        </div>
      </div>
      <div
        class="dropdown-container"
      >
        <button
          class="button dropdown tertiary"
          type="button"
        >
          Select annotation
        </button>
        <div
          class="dropdown-menu"
        >
          <div
            class="autocomplete-container"
          >
            <span
              class="search-input"
            >
              <input
                data-testid="search-input"
                placeholder="Look for an annotation"
                type="text"
                value=""
              />
              <span
                class="search-input__suffix"
                data-testid="search-input-suffix"
                role="presentation"
              >
                <svg
                  fill="currentColor"
                  height="14"
                  viewBox="0 0 512 512"
                  width="14"
                >
                  <path
                    d="M505 443L405 343c-4-4-10-7-17-7h-16a208 208 0 10-36 36v16c0 7 3 13 7 17l100 100c9 9 24 9 34 0l28-28c9-10 9-25 0-34zM208 336a128 128 0 110-256 128 128 0 010 256z"
                  />
                </svg>
              </span>
            </span>
            <div
              class="autocomplete-menu"
            >
              <div
                class="dropdown-menu__panel"
              />
            </div>
          </div>
          <div
            class="dropdown-menu__panel"
          >
            <ul
              class=""
            >
              <li
                class="branch"
              >
                <button
                  class="active"
                  type="button"
                >
                  sp|P05066|PHR_YEAST
                </button>
                <ul
                  class=""
                >
                  <li
                    class=""
                  >
                    <button
                      class="active"
                      type="button"
                    >
                      Other domain of interest
                    </button>
                  </li>
                  <li
                    class=""
                  >
                    <button
                      class=""
                      type="button"
                    >
                      Nucleotide-binding region
                    </button>
                  </li>
                </ul>
              </li>
              <li
                class="branch"
              >
                <button
                  class=""
                  type="button"
                >
                  sp|P05067|A4_HUMAN
                </button>
                <ul
                  class=""
                >
                  <li
                    class=""
                  >
                    <button
                      class=""
                      type="button"
                    >
                      signal peptide
                    </button>
                  </li>
                  <li
                    class=""
                  >
                    <button
                      class=""
                      type="button"
                    >
                      chain
                    </button>
                  </li>
                </ul>
              </li>
              <li
                class="branch"
              >
                <button
                  class=""
                  type="button"
                >
                  sp|P05062|ALDOB_HUMAN
                </button>
                <ul
                  class=""
                >
                  <li
                    class=""
                  >
                    <button
                      class=""
                      type="button"
                    >
                      initiator methionine
                    </button>
                  </li>
                  <li
                    class=""
                  >
                    <button
                      class=""
                      type="button"
                    >
                      chain
                    </button>
                  </li>
                </ul>
              </li>
              <li
                class="branch"
              >
                <button
                  class=""
                  type="button"
                >
                  sp|P05064|ALDOA_MOUSE
                </button>
                <ul
                  class=""
                >
                  <li
                    class=""
                  >
                    <button
                      class=""
                      type="button"
                    >
                      chain
                    </button>
                  </li>
                  <li
                    class=""
                  >
                    <button
                      class=""
                      type="button"
                    >
                      active site
                    </button>
                  </li>
                </ul>
              </li>
            </ul>
          </div>
        </div>
      </div>
      <fieldset
        class="msa-view-choice"
      >
        View:
        <label>
          <input
            checked=""
            name="view"
            type="radio"
          />
          Overview
        </label>
        <label>
          <input
            name="view"
            type="radio"
          />
          Wrapped
        </label>
      </fieldset>
    </div>
    <div>
      <protvista-tooltip />
      <section
        class="alignment-grid"
        data-testid="alignment-view"
      >
        <span
          class="track-label"
        >
          Overview
        </span>
        <div
          class="track"
        >
          <div>
            <protvista-track
              height="7"
              highlight="1:958"
              layout="non-overlapping"
              length="957"
            />
            <protvista-track
              height="7"
              highlight="1:958"
              layout="non-overlapping"
              length="957"
            />
            <protvista-track
              height="7"
              highlight="1:958"
              layout="non-overlapping"
              length="957"
            />
            <protvista-track
              height="7"
              highlight="1:958"
              layout="non-overlapping"
              length="957"
            />
          </div>
        </div>
        <span
          class="track-label"
          data-testid="track-label"
        >
          P05066:Other domain of interest
        </span>
        <div
          class="track"
        >
          <protvista-track
            highlight="1:958"
            layout="non-overlapping"
            length="957"
          />
        </div>
        <div
          class="track-label track-label--align-labels"
        >
          <button
            class="align-label align-label--active align-label--selectable"
            style="height: 20px;"
            tabindex="0"
            type="button"
          >
            <input
              type="checkbox"
            />
            <span
              class="uniprot-title__status icon--reviewed"
              title="This marks a reviewed entry"
            >
              <svg
                fill="currentColor"
                viewBox="0 0 426 512"
              >
                <path
                  d="M432 144H288V0l144 144zM113 404l66 35-13-74 54-52-74-11-33-67-33 67-74 11 53 52-12 74 66-35zm-81 88v20h200l-119-63-81 43zm114-190l-33-67-33 67-48 7v29l27 27-12 74 66-35 66 35-13-74 54-52-74-11zm110-126V0H32v269l21-3 60-121 60 121 133 19-97 94 23 133h200V176H256z"
                />
              </svg>
            </span>
            sp|
            <a
              href="/uniprotkb/P05066"
            >
              P05066
            </a>
            |PHR_YEAST
          </button>
          <button
            class="align-label align-label--selectable"
            style="height: 20px;"
            tabindex="0"
            type="button"
          >
            <input
              type="checkbox"
            />
            <span
              class="uniprot-title__status icon--reviewed"
              title="This marks a reviewed entry"
            >
              <svg
                fill="currentColor"
                viewBox="0 0 426 512"
              >
                <path
                  d="M432 144H288V0l144 144zM113 404l66 35-13-74 54-52-74-11-33-67-33 67-74 11 53 52-12 74 66-35zm-81 88v20h200l-119-63-81 43zm114-190l-33-67-33 67-48 7v29l27 27-12 74 66-35 66 35-13-74 54-52-74-11zm110-126V0H32v269l21-3 60-121 60 121 133 19-97 94 23 133h200V176H256z"
                />
              </svg>
            </span>
            sp|
            <a
              href="/uniprotkb/P05067"
            >
              P05067
            </a>
            |A4_HUMAN
          </button>
          <button
            class="align-label align-label--selectable"
            style="height: 20px;"
            tabindex="0"
            type="button"
          >
            <input
              type="checkbox"
            />
            <span
              class="uniprot-title__status icon--reviewed"
              title="This marks a reviewed entry"
            >
              <svg
                fill="currentColor"
                viewBox="0 0 426 512"
              >
                <path
                  d="M432 144H288V0l144 144zM113 404l66 35-13-74 54-52-74-11-33-67-33 67-74 11 53 52-12 74 66-35zm-81 88v20h200l-119-63-81 43zm114-190l-33-67-33 67-48 7v29l27 27-12 74 66-35 66 35-13-74 54-52-74-11zm110-126V0H32v269l21-3 60-121 60 121 133 19-97 94 23 133h200V176H256z"
                />
              </svg>
            </span>
            sp|
            <a
              href="/uniprotkb/P05062"
            >
              P05062
            </a>
            |ALDOB_HUMAN
          </button>
          <button
            class="align-label align-label--selectable"
            style="height: 20px;"
            tabindex="0"
            type="button"
          >
            <input
              type="checkbox"
            />
            <span
              class="uniprot-title__status icon--reviewed"
              title="This marks a reviewed entry"
            >
              <svg
                fill="currentColor"
                viewBox="0 0 426 512"
              >
                <path
                  d="M432 144H288V0l144 144zM113 404l66 35-13-74 54-52-74-11-33-67-33 67-74 11 53 52-12 74 66-35zm-81 88v20h200l-119-63-81 43zm114-190l-33-67-33 67-48 7v29l27 27-12 74 66-35 66 35-13-74 54-52-74-11zm110-126V0H32v269l21-3 60-121 60 121 133 19-97 94 23 133h200V176H256z"
                />
              </svg>
            </span>
            sp|
            <a
              href="/uniprotkb/P05064"
            >
              P05064
            </a>
            |ALDOA_MOUSE
          </button>
        </div>
        <div
          class="track"
        >
          <protvista-manager
            attributes="displaystart displayend"
            displayend="957"
            displaystart="1"
          >
            <protvista-navigation
              length="957"
            />
            <protvista-msa
              calculate-conservation="true"
              colorscheme="conservation"
              height="80"
              hidelabel="true"
              length="957"
              overlay-conservation="true"
            />
          </protvista-manager>
        </div>
        <span
          class="right-coord"
        >
          <div
            style="height: 20px;"
          >
            565
          </div>
          <div
            style="height: 20px;"
          >
            770
          </div>
          <div
            style="height: 20px;"
          >
            364
          </div>
          <div
            style="height: 20px;"
          >
            364
          </div>
        </span>
      </section>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AlignmentView BLAST should render 1`] = `
<DocumentFragment>
  <div
    class="main-content-and-footer"
  >
    <div
      class="button-group"
    >
      <div
        class="dropdown-container"
      >
        <button
          class="button dropdown tertiary"
          type="button"
        >
          Highlight properties
        </button>
        <div
          class="dropdown-menu"
        >
          <div
            class="autocomplete-container"
          >
            <span
              class="search-input"
            >
              <input
                data-testid="search-input"
                placeholder="Enter a color scheme"
                type="text"
                value=""
              />
              <span
                class="search-input__suffix"
                data-testid="search-input-suffix"
                role="presentation"
              >
                <svg
                  fill="currentColor"
                  height="14"
                  viewBox="0 0 512 512"
                  width="14"
                >
                  <path
                    d="M505 443L405 343c-4-4-10-7-17-7h-16a208 208 0 10-36 36v16c0 7 3 13 7 17l100 100c9 9 24 9 34 0l28-28c9-10 9-25 0-34zM208 336a128 128 0 110-256 128 128 0 010 256z"
                  />
                </svg>
              </span>
            </span>
            <div
              class="autocomplete-menu"
            >
              <div
                class="dropdown-menu__panel"
              />
            </div>
          </div>
          <div
            class="dropdown-menu__panel"
          >
            <ul
              class=""
            >
              <li
                class=""
              >
                <button
                  class="active"
                  type="button"
                >
                  Similarity
                </button>
              </li>
              <li
                class=""
              >
                <button
                  class=""
                  type="button"
                >
                  Clustal
                </button>
              </li>
              <li
                class="branch"
              >
                <button
                  class=""
                  type="button"
                >
                  Physical properties
                </button>
                <ul
                  class=""
                >
                  <li
                    class=""
                  >
                    <button
                      class=""
                      type="button"
                    >
                      Hydrophobicity
                    </button>
                  </li>
                  <li
                    class=""
                  >
                    <button
                      class=""
                      type="button"
                    >
                      Negative
                    </button>
                  </li>
                  <li
                    class=""
                  >
                    <button
                      class=""
                      type="button"
                    >
                      Positive
                    </button>
                  </li>
                  <li
                    class=""
                  >
                    <button
                      class=""
                      type="button"
                    >
                      Charged
                    </button>
                  </li>
                  <li
                    class=""
                  >
                    <button
                      class=""
                      type="button"
                    >
                      Polar
                    </button>
                  </li>
                  <li
                    class=""
                  >
                    <button
                      class=""
                      type="button"
                    >
                      Aliphatic
                    </button>
                  </li>
                  <li
                    class=""
                  >
                    <button
                      class=""
                      type="button"
                    >
                      Aromatic
                    </button>
                  </li>
                </ul>
              </li>
              <li
                class="branch"
              >
                <button
                  class=""
                  type="button"
                >
                  Structural properties
                </button>
                <ul
                  class=""
                >
                  <li
                    class=""
                  >
                    <button
                      class=""
                      type="button"
                    >
                      Buried Index
                    </button>
                  </li>
                  <li
                    class=""
                  >
                    <button
                      class=""
                      type="button"
                    >
                      Helix Propensity
                    </button>
                  </li>
                  <li
                    class=""
                  >
                    <button
                      class=""
                      type="button"
                    >
                      Strand Propensity
                    </button>
                  </li>
                  <li
                    class=""
                  >
                    <button
                      class=""
                      type="button"
                    >
                      Turn Propensity
                    </button>
                  </li>
                </ul>
              </li>
              <li
                class=""
              >
                <button
                  class=""
                  type="button"
                >
                  Serine Threonine
                </button>
              </li>
              <li
                class="branch"
              >
                <button
                  class=""
                  type="button"
                >
                  Other
                </button>
                <ul
                  class=""
                >
                  <li
                    class=""
                  >
                    <button
                      class=""
                      type="button"
                    >
                      Clustal 2
                    </button>
                  </li>
                  <li
                    class=""
                  >
                    <button
                      class=""
                      type="button"
                    >
                      Cinema
                    </button>
                  </li>
                  <li
                    class=""
                  >
                    <button
                      class=""
                      type="button"
                    >
                      Lesk
                    </button>
                  </li>
                  <li
                    class=""
                  >
                    <button
                      class=""
                      type="button"
                    >
                      MAE
                    </button>
                  </li>
                  <li
                    class=""
                  >
                    <button
                      class=""
                      type="button"
                    >
                      Taylor
                    </button>
                  </li>
                  <li
                    class=""
                  >
                    <button
                      class=""
                      type="button"
                    >
                      Zappo
                    </button>
                  </li>
                </ul>
              </li>
            </ul>
          </div>
        </div>
      </div>
      <div
        class="dropdown-container"
      >
        <button
          class="button dropdown tertiary"
          type="button"
        >
          Select annotation
        </button>
        <div
          class="dropdown-menu"
        >
          <div
            class="autocomplete-container"
          >
            <span
              class="search-input"
            >
              <input
                data-testid="search-input"
                placeholder="Look for an annotation"
                type="text"
                value=""
              />
              <span
                class="search-input__suffix"
                data-testid="search-input-suffix"
                role="presentation"
              >
                <svg
                  fill="currentColor"
                  height="14"
                  viewBox="0 0 512 512"
                  width="14"
                >
                  <path
                    d="M505 443L405 343c-4-4-10-7-17-7h-16a208 208 0 10-36 36v16c0 7 3 13 7 17l100 100c9 9 24 9 34 0l28-28c9-10 9-25 0-34zM208 336a128 128 0 110-256 128 128 0 010 256z"
                  />
                </svg>
              </span>
            </span>
            <div
              class="autocomplete-menu"
            >
              <div
                class="dropdown-menu__panel"
              />
            </div>
          </div>
          <div
            class="dropdown-menu__panel"
          >
            <ul
              class=""
            >
              <li
                class="branch"
              >
                <button
                  class="active"
                  type="button"
                >
                  Match:P05066
                </button>
                <ul
                  class=""
                >
                  <li
                    class=""
                  >
                    <button
                      class="active"
                      type="button"
                    >
                      Other domain of interest
                    </button>
                  </li>
                  <li
                    class=""
                  >
                    <button
                      class=""
                      type="button"
                    >
                      Nucleotide-binding region
                    </button>
                  </li>
                  <li
                    class=""
                  >
                    <button
                      class=""
                      type="button"
                    >
                      region of interest
                    </button>
                  </li>
                  <li
                    class=""
                  >
                    <button
                      class=""
                      type="button"
                    >
                      Other binding site
                    </button>
                  </li>
                  <li
                    class=""
                  >
                    <button
                      class=""
                      type="button"
                    >
                      Other site of interest
                    </button>
                  </li>
                  <li
                    class=""
                  >
                    <button
                      class=""
                      type="button"
                    >
                      mutagenesis site
                    </button>
                  </li>
                  <li
                    class=""
                  >
                    <button
                      class=""
                      type="button"
                    >
                      sequence conflict
                    </button>
                  </li>
                </ul>
              </li>
            </ul>
          </div>
        </div>
      </div>
      <fieldset
        class="msa-view-choice"
      >
        View:
        <label>
          <input
            checked=""
            name="view"
            type="radio"
          />
          Overview
        </label>
        <label>
          <input
            name="view"
            type="radio"
          />
          Wrapped
        </label>
      </fieldset>
    </div>
    <div>
      <protvista-tooltip />
      <section
        class="alignment-grid"
        data-testid="alignment-view"
      >
        <span
          class="track-label"
        >
          Overview
        </span>
        <div
          class="track"
        >
          <div>
            <protvista-track
              height="15"
              highlight="1:566"
              layout="non-overlapping"
              length="565"
            />
            <protvista-track
              height="15"
              highlight="1:566"
              layout="non-overlapping"
              length="565"
            />
          </div>
        </div>
        <span
          class="track-label"
          data-testid="track-label"
        >
          P05066:Other domain of interest
        </span>
        <div
          class="track"
        >
          <protvista-track
            highlight="1:566"
            layout="non-overlapping"
            length="565"
          />
        </div>
        <div
          class="track-label track-label--align-labels"
        >
          <span
            class="align-label"
          >
            Query
          </span>
          <button
            class="align-label"
            style="height: 20px;"
            tabindex="-1"
            type="button"
          >
            Match:
            <a
              href="/uniprotkb/P05066"
            >
              P05066
            </a>
          </button>
        </div>
        <div
          class="track"
        >
          <protvista-manager
            attributes="displaystart displayend"
            displayend="565"
            displaystart="1"
          >
            <protvista-navigation
              length="565"
            />
            <protvista-msa
              calculate-conservation="true"
              colorscheme="conservation"
              height="40"
              hidelabel="true"
              length="565"
              overlay-conservation="true"
            />
          </protvista-manager>
        </div>
        <span
          class="right-coord"
        >
          <div
            style="height: 20px;"
          >
            565
          </div>
          <div
            style="height: 20px;"
          >
            565
          </div>
        </span>
      </section>
    </div>
  </div>
</DocumentFragment>
`;
